<resources>
    <string name="app_name">采集工具</string>
    <string name="main_title_hint">Hi~欢迎使用</string>
    <string name="login_title">存量建筑照片及定位采集系统</string>
    <string name="permission_tip">软件正常使用需要以下权限</string>
    <string name="main_ticket">台账</string>
    <string name="main_first">首页</string>
    <string name="main_my">我的</string>
    <string name="main_my_tool">我的工具</string>
    <string name="main_tree">树形图</string>

    <!-- 登录界面 -->
    <string name="login_subtitle">安全便捷的工单管理平台</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="login_hint">请输入您的账号信息登录</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="remember_me">记住密码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="no_account">还没有账号？</string>
    <string name="register_now">立即注册</string>

    <string name="username_or_password_empty">用户名称或密码不能为空</string>
    <string name="user_name_label">户名</string>
    <string name="account_number">户号</string>
    <string name="belonging_area">区域</string>
    <string name="dispatch_time">派工时间:</string>
    <string name="illegal_backfill_title">台账回填</string>
    <string name="illegal_add_title">新增台账</string>
    <string name="upload_ticket_file_title">导入两违待办</string>
    <string name="upload_ticket_file_header">上传 Excel 台账文件</string>
    <string name="upload_ticket_file_desc">请选择需要导入的台账文件，系统当前仅支持 .xlsx 格式。选中文件后点击底部按钮即可开始上传。</string>
    <string name="upload_ticket_file_support_tip">支持格式：.xlsx</string>
    <string name="upload_ticket_file_selected_label">已选文件</string>
    <string name="upload_ticket_file_selected_tag">已选择</string>
    <string name="upload_ticket_file_choose">选择文件</string>
    <string name="upload_ticket_file_choose_plan">选中要导入的计划文件</string>
    <string name="upload_ticket_file_reselect">重新选择</string>
    <string name="upload_ticket_file_no_selection">暂未选择文件</string>
    <string name="upload_ticket_file_select_tip">点击上方区域选择本地 Excel 文件，建议上传前先确认内容与模板一致。</string>
    <string name="upload_ticket_file_submit">上传文件</string>
    <string name="upload_ticket_file_selected_name">已选择：%1$s</string>
    <string name="upload_ticket_file_empty_hint">请先选择要上传的 Excel 文件</string>
    <string name="upload_ticket_file_invalid_type">请选择 .xlsx 格式文件</string>
    <string name="upload_ticket_file_select_failed">文件选择失败，请重新选择</string>
    <string name="upload_ticket_file_success">文件上传成功</string>
    <string name="upload_ticket_file_failed">文件上传失败，请稍后重试</string>
    <string name="upload_ticket_result_success_title">导入成功!</string>
    <string name="upload_ticket_result_failed_title">导入失败</string>
    <string name="upload_ticket_result_failed_default_reason">导入失败原因！导入失败原因！导入失败原因！导入失败原因！</string>
    <string name="upload_ticket_result_back">返回</string>
    <string name="upload_ticket_result_preview">预览</string>
    <string name="upload_ticket_result_retry">重新导入</string>
    <string name="upload_ticket_preview_count">共 %1$d 条待办</string>
    <string name="upload_ticket_preview_empty">暂无可预览的导入数据</string>
    <string name="illegal_info">台账信息</string>
    <string name="illegal_add">新增台账</string>
    <string name="illegal_import">导入台账</string>
    <string name="user_address">地址</string>
    <string name="address">地址</string>
    <string name="location_address">定位地址</string>
    <string name="take_photo_time">拍照时间</string>
    <string name="scene_info">现场信息</string>
    <string name="remark">备注</string>
    <string name="illegal_building_location">建筑定位</string>
    <string name="take_photo_hint">请对现场进行拍照</string>
    <string name="take_photo_hint_government_documents">请选择政府文件</string>
    <string name="location_click_hint">请点击进行建筑定位</string>
    <string name="location_hint">请先进行定位</string>
    <string name="please_take_photo_hint">请先拍摄现场照片</string>
    <string name="add_ticket">新增台账</string>
    <string name="area_input_hint">请选择区域</string>
    <string name="address_input_hint">请输入地址</string>
    <string name="user_name_input_hint">请输入户名</string>
    <string name="account_input_hint">请输入户号</string>
    <string name="area_required_hint">请先选择区域</string>
    <string name="address_required_hint">请先填写地址</string>
    <string name="user_name_required_hint">请先填写户名</string>
    <string name="account_required_hint">请先填写户号</string>
    <string name="create_and_submit">新增并提交</string>
    <string name="submit">提交</string>
    <string name="area_dialog_title">请选择第%1$d级区域</string>
    <string name="area_empty_hint">暂无可选区域</string>
    <string name="area_tree_picker_tip">点击节点可展开或收起，选中目标节点后点确定</string>
    <string name="area_select_none">当前未选择区域</string>
    <string name="edit_user_info">编辑</string>
    <string name="edit_user_info_title">编辑用户信息</string>
    <string name="edit_user_info_success">用户信息修改成功</string>
    <string name="max_photo_count">最多只能选择%d张图片</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">从相册选择</string>
    <string name="select_photo_title">选择图片/文件</string>
    <string name="not_work">未采集</string>
    <string name="finish_work">已采集</string>
    <string name="search">搜索</string>
    <string name="take_account">拍照人</string>
    <string name="file_permission">项目使用需要用到外部文件权限</string>

    <!-- 图片选择相关 -->
    <string name="photo_count_limit">最多只能选择9张图片</string>
    <string name="camera_permission_denied">需要相机权限才能拍照</string>
    <string name="photo_select_failed">图片选取失败</string>
    <string name="no_camera_app">未找到相机应用</string>
    <string name="create_image_file_failed">创建图片文件失败</string>
    <string name="upload_file_progress_title">上传文件(%1$d/%2$d)</string>
    <string name="upload_file_success">上传完成</string>
    <string name="upload_file_completed">上传完成(成功%1$d个，失败%2$d个)</string>
    <string name="percent_format">%1$d%%</string>

    <!-- 可折叠页面 -->
    <string name="collapsible_pager_title">个人中心</string>
    <string name="tab_info">信息</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_settings">设置</string>
    <string name="tab_about">关于</string>




    <!-- 文件下载提示 -->
    <string name="download_confirm_title">确认下载</string>
    <string name="download_confirm_message">确定要下载文件 %1$s 吗？</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="logout_confirm_title">退出登录</string>
    <string name="logout_confirm_message">确定要退出当前账号并返回登录页吗？</string>
    <string name="download_cancelled">已取消下载</string>
    <string name="download_in_progress">文件下载中...</string>
    <string name="download_started">开始下载: %1$s</string>
    <string name="download_failed">下载失败: %1$s</string>

</resources>
