<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/main_bg">

        <TextView
            android:fitsSystemWindows="true"
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/main_title_hint"
            android:textColor="@color/text_color333"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_tool_head" />

                <TextView
                    android:id="@+id/tv_tool_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/main_my_tool"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <RelativeLayout
                    android:id="@+id/rl_ticket_list"
                    android:layout_width="150dp"
                    android:layout_height="175dp"
                    android:layout_below="@+id/tv_tool_title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="25dp"
                    android:background="@mipmap/main_top_yellow">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/illegal_info"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="10dp"
                        android:src="@mipmap/main_tool_icon1" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_ticket_add"
                    android:layout_width="165dp"
                    android:layout_height="75dp"
                    android:layout_alignTop="@+id/rl_ticket_list"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/rl_ticket_list"
                    android:background="@mipmap/main_top_green">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/illegal_add"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@mipmap/main_tool_icon2" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_ticket_import"
                    android:layout_width="165dp"
                    android:layout_height="75dp"
                    android:layout_alignBottom="@+id/rl_ticket_list"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/rl_ticket_list"
                    android:background="@mipmap/main_top_purple">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/illegal_import"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@mipmap/main_tool_icon3" />

                </RelativeLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:textSize="18sp"
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_gray_radius_10"
            android:text="@string/logout_confirm_title"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>